# KautapenOperations

./: .env.example  .gitignore  Makefile  PLAN_demo_costos_bednight.md  PLAN_fase2_webapp.md  README.md  alembic.ini  pyproject.toml
Proyecto_Operaciones/: Budget DEL 25-26.xlsx  Budget El Tobar 25-26.xlsx  Budget Jacana 25-26.xlsx  DELTA_ECONOMICO ANALISIS PRELIMINAR_TEMP 2025_2026_al_31-05-2026.xlsx  README.md  REPORTE_PROGRESO.md  URUGUAY_ECONOMICO ANALISIS PRELIMINAR_TEMP 2025_2026_al_31-05-2026 - Budget Nuevo.xlsx  docker-compose.yml
Proyecto_Operaciones/alembic/: env.py
Proyecto_Operaciones/scripts/: run_demo.py  seed_db.py
Proyecto_Operaciones/src/api/: __init__.py  main.py  schemas.py
Proyecto_Operaciones/src/db/: models.py  session.py
Proyecto_Operaciones/src/operaciones/: discovery.py  parsing.py
Proyecto_Operaciones/tests/: test_smoke.py
alembic/versions/: 20260628_initial_schema.py  20260628_season_bn_real_std_months_elapsed.py
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: PageHeader.tsx  Sidebar.tsx
frontend/src/lib/: api.ts  format.ts  types.ts
scripts/: import_movements.py  reconcile_db.py  reconcile_demo.py  run_demo.py  seed_db.py  serve.py  validate_comparativo.py
src/api/: deps.py  main.py  services.py
src/db/: __init__.py  session.py
src/operaciones/: __init__.py  discovery.py  io_xlsx.py  models.py  settings.py
src/operaciones/calc/: flags.py  per_bednight.py  reconcile.py
src/operaciones/ingest/: plan_cuentas.py
src/operaciones/report/: markdown.py
tests/: test_smoke.py
(+20 files in other folders)
